Brigadier backed commands (#61)